--- a/miniprojet/miniprojet.html
+++ b/miniprojet/miniprojet.html
@@ -34,7 +34,7 @@
             </section>
         </header>
         <main>
-            <aside>
+            <aside id="aside-hidden">
                 <nav>
                     <h2 class="main-btn">UTILISATEURS
                         <span aria-hidden="true" class="bi bi-caret-down">
