--- a/miniprojet/miniprojet.html
+++ b/miniprojet/miniprojet.html
@@ -18,7 +18,7 @@
     <body>
         <header>
             <h1 class="hidden">Header</h1>
-            <section>
+            <section id="header-section" class="border-right">
                 <button id="side-menu-btn">
                     <span class="bi-chevron-bar-left">
                         
