--- a/miniprojet/miniprojet.html
+++ b/miniprojet/miniprojet.html
@@ -72,7 +72,134 @@
                 </nav>
             </aside>
             <section>
-                
+                <h2>Liste des utilisateurs</h2>
+                <section>
+                    <h3 class="hidden">Ajouter un utilisateur</h3>
+                    <button class="add-btn" id="add-user-btn">
+                        <span class="bi-person-fill-add"></span> 
+                        Ajouter un utilisateur
+                    </button>
+                </section>
+                <section>
+                    <h3 class="hidden">Les données</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Nom</th>
+                                <th>Age</th>
+                                <th>Actif</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!--<tr>
+                                <td>O</td>
+                                <td>Marsh Obrien</td>
+                                <td>24</td>
+                                <td>
+                                    <span class="bi-person-fill-down" aria-labelledby="Inactif"></span>
+                                </td>
+                                <td>
+                                    <a href=""><span class="bi-eye" aria-labelledby="Voir l'utilisateur"></span></a>
+                                    <a href=""><span class="bi-pen" aria-labelledby="Modifier l'utilisateur"></span></a>
+                                    <button class="delete-user" data-user="0"><span class="bi-trash3" aria-labelledby="Supprimer l'utilisateur"></span></button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Marsh Obrien</td>
+                                <td>24</td>
+                                <td>
+                                    <span class="bi-person-fill-down" aria-labelledby="Inactif"></span>
+                                </td>
+                                <td>
+                                    <a href=""><span class="bi-eye" aria-labelledby="Voir l'utilisateur"></span></a>
+                                    <a href=""><span class="bi-pen" aria-labelledby="Modifier l'utilisateur"></span></a>
+                                    <button class="delete-user" data-user="0"><span class="bi-trash3" aria-labelledby="Supprimer l'utilisateur"></span></button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>O</td>
+                                <td>Marsh Obrien</td>
+                                <td>24</td>
+                                <td>
+                                    <span class="bi-person-fill-down" aria-labelledby="Inactif"></span>
+                                </td>
+                                <td>
+                                    <a href=""><span class="bi-eye" aria-labelledby="Voir l'utilisateur"></span></a>
+                                    <a href=""><span class="bi-pen" aria-labelledby="Modifier l'utilisateur"></span></a>
+                                    <button class="delete-user" data-user="0"><span class="bi-trash3" aria-labelledby="Supprimer l'utilisateur"></span></button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Rios Gibson</td>
+                                <td>21</td>
+                                <td>
+                                    <span class="bi-person-fill-down" aria-labelledby="Inactif"></span>
+                                </td>
+                                <td>
+                                    <a href=""><span class="bi-eye" aria-labelledby="Voir l'utilisateur"></span></a>
+                                    <a href=""><span class="bi-pen" aria-labelledby="Modifier l'utilisateur"></span></a>
+                                    <button class="delete-user" data-user="0"><span class="bi-trash3" aria-labelledby="Supprimer l'utilisateur"></span></button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Morgan Buchanan</td>
+                                <td>29</td>
+                                <td>
+                                    <span class="bi-person-fill-down" aria-labelledby="Inactif"></span>
+                                </td>
+                                <td>
+                                    <a href=""><span class="bi-eye" aria-labelledby="Voir l'utilisateur"></span></a>
+                                    <a href=""><span class="bi-pen" aria-labelledby="Modifier l'utilisateur"></span></a>
+                                    <button class="delete-user" data-user="0"><span class="bi-trash3" aria-labelledby="Supprimer l'utilisateur"></span></button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Franklin Dyer</td>
+                                <td>25</td>
+                                <td>
+                                    <span class="bi-person-fill-down" aria-labelledby="Inactif"></span>
+                                </td>
+                                <td>
+                                    <a href=""><span class="bi-eye" aria-labelledby="Voir l'utilisateur"></span></a>
+                                    <a href=""><span class="bi-pen" aria-labelledby="Modifier l'utilisateur"></span></a>
+                                    <button class="delete-user" data-user="0"><span class="bi-trash3" aria-labelledby="Supprimer l'utilisateur"></span></button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Keller Pitts</td>
+                                <td>30</td>
+                                <td>
+                                    <span class="bi-person-fill-down" aria-labelledby="Inactif"></span>
+                                </td>
+                                <td>
+                                    <a href=""><span class="bi-eye" aria-labelledby="Voir l'utilisateur"></span></a>
+                                    <a href=""><span class="bi-pen" aria-labelledby="Modifier l'utilisateur"></span></a>
+                                    <button class="delete-user" data-user="0"><span class="bi-trash3" aria-labelledby="Supprimer l'utilisateur"></span></button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>Davenport Maddo</td>
+                                <td>25</td>
+                                <td>
+                                    <span class="bi-person-fill-down" aria-labelledby="Inactif"></span>
+                                </td>
+                                <td>
+                                    <a href=""><span class="bi-eye" aria-labelledby="Voir l'utilisateur"></span></a>
+                                    <a href=""><span class="bi-pen" aria-labelledby="Modifier l'utilisateur"></span></a>
+                                    <button class="delete-user" data-user="0"><span class="bi-trash3" aria-labelledby="Supprimer l'utilisateur"></span></button>
+                                </td>
+                            </tr>-->
+                        </tbody>
+                    </table>
+                </section>
             </section>
         </main>
         <script type="application/javascript" src="miniprojet.js"></script>
